--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Mohamed Aouadhi
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Embedded Software Developper
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/62809319?s=400&u=4f99d49bcc572935200845a8caedbf259316be3e&v=4
 
 #
 # Flags below are optional
