--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: MedAouadhi/didactic_os
   instagram:
-  linkedin: https://www.linkedin.com/in/mohamed-aouadhi-a375b462/
+  linkedin: mohamed-aouadhi-a375b462/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
